update github actions flow

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,10 @@ name: Code Check
 on:
   push:
     branches:
+      - dev
+      - stage
       - main
+      - prod
   pull_request: {}
 
 concurrency:
@@ -17,28 +20,27 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v2
 
-      - name: 🤌 Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
       - name: ⎔ Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 20
-          cache: 'pnpm'
+          node-version: 18
 
       - name: 📥 Download deps
-        run: pnpm install --frozen-lockfile
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
+
+      - name: 📦 Install dependencies
+        run: bun install --frozen-lockfile
 
       - name: 🔬 Lint
-        run: pnpm run lint:strict
+        run: bun run lint:strict
 
       - name: 🔎 Type check
-        run: pnpm run typecheck
+        run: bun run typecheck
 
       - name: 💅 Prettier check
-        run: pnpm run format:check
+        run: bun run format:check
 
-      - name: 🃏 Run jest
-        run: pnpm run test
+      - name: 🃏 Run test
+        run: npm run test
